force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Use_Paypal_API__c.field-meta.xml
<CustomField>
    <fullName>fw1__Use_Paypal_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Paypal API</label>
    <type>Checkbox</type>
</CustomField>