force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Use_URL__c.field-meta.xml
<CustomField>
    <fullName>fw1__Use_URL__c</fullName>
    <label>Use URL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>URL1</fullName>
            </value>
            <value>
                <fullName>URL2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>