force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Verification_Level__c.field-meta.xml
<CustomField>
    <fullName>fw1__Verification_Level__c</fullName>
    <label>Verification Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>