force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Adyen.recordType-meta.xml
<RecordType>
    <fullName>fw1__Adyen</fullName>
    <active>true</active>
    <label>Adyen</label>
</RecordType>