force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Authorize_Net.recordType-meta.xml
<RecordType>
    <fullName>fw1__Authorize_Net</fullName>
    <active>true</active>
    <label>Authorize.Net</label>
</RecordType>