force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Blue_Pay.recordType-meta.xml
<RecordType>
    <fullName>fw1__Blue_Pay</fullName>
    <active>true</active>
    <label>Blue Pay</label>
</RecordType>