force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__CardConnect.recordType-meta.xml
<RecordType>
    <fullName>fw1__CardConnect</fullName>
    <active>true</active>
    <label>CardConnect</label>
</RecordType>