force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Chase.recordType-meta.xml
<RecordType>
    <fullName>fw1__Chase</fullName>
    <active>true</active>
    <label>Chase</label>
</RecordType>