force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Converge.recordType-meta.xml
<RecordType>
    <fullName>fw1__Converge</fullName>
    <active>true</active>
    <label>Converge</label>
</RecordType>