force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__CyberSource.recordType-meta.xml
<RecordType>
    <fullName>fw1__CyberSource</fullName>
    <active>true</active>
    <label>CyberSource</label>
</RecordType>