force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__EPPS.recordType-meta.xml
<RecordType>
    <fullName>fw1__EPPS</fullName>
    <active>true</active>
    <label>EPPS</label>
</RecordType>