force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Flywire.recordType-meta.xml
<RecordType>
    <fullName>fw1__Flywire</fullName>
    <active>true</active>
    <label>Flywire</label>
</RecordType>