force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Forte.recordType-meta.xml
<RecordType>
    <fullName>fw1__Forte</fullName>
    <active>true</active>
    <label>Forte</label>
</RecordType>