force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Moneris.recordType-meta.xml
<RecordType>
    <fullName>fw1__Moneris</fullName>
    <active>true</active>
    <label>Moneris</label>
</RecordType>