force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__NMI.recordType-meta.xml
<RecordType>
    <fullName>fw1__NMI</fullName>
    <active>true</active>
    <label>NMI</label>
</RecordType>