force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Payeezy.recordType-meta.xml
<RecordType>
    <fullName>fw1__Payeezy</fullName>
    <active>true</active>
    <label>Payeezy</label>
</RecordType>