force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Payflow.recordType-meta.xml
<RecordType>
    <fullName>fw1__Payflow</fullName>
    <active>true</active>
    <label>Payflow</label>
</RecordType>