force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__PayLeap.recordType-meta.xml
<RecordType>
    <fullName>fw1__PayLeap</fullName>
    <active>true</active>
    <label>PayLeap</label>
</RecordType>