force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__PayPal.recordType-meta.xml
<RecordType>
    <fullName>fw1__PayPal</fullName>
    <active>true</active>
    <label>PayPal</label>
</RecordType>