force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Recurly.recordType-meta.xml
<RecordType>
    <fullName>fw1__Recurly</fullName>
    <active>true</active>
    <label>Recurly</label>
</RecordType>