force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__ServeFirst.recordType-meta.xml
<RecordType>
    <fullName>fw1__ServeFirst</fullName>
    <active>true</active>
    <label>ServeFirst</label>
</RecordType>