force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Spreedly.recordType-meta.xml
<RecordType>
    <fullName>fw1__Spreedly</fullName>
    <active>true</active>
    <label>Spreedly</label>
</RecordType>