force-app/main/default/objects/fw1__Payment_Processor__c/recordTypes/fw1__Stripe.recordType-meta.xml
<RecordType>
    <fullName>fw1__Stripe</fullName>
    <active>true</active>
    <label>Stripe</label>
</RecordType>