force-app/main/default/objects/fw1__Payment_Processor__c/listViews/fw1__All.listView-meta.xml
<ListView>
    <fullName>fw1__All</fullName>
    <columns>NAME</columns>
    <columns>fw1__Live__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>